--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 window.location.href = "index.html"; // Redirige vers la page d'accueil
             });
             document.getElementById("btn2").addEventListener("click", function() {
-                window.location.href = "cv.html"; // Redirige vers la page CV
+                window.location.href = "cv.pdf"; // Redirige vers la page CV
             });
             document.getElementById("btn3").addEventListener("click", function() {
                 window.location.href = "projets.html"; // Redirige vers la page Projets
