Ajout des placeholders de projets

--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
             </a>
         </div>
     </div>
-
+    <div>
+        <center><h1>Présentation</h1>
+        <h4>Je suis Tharindu Perera, étudiant en BUT Informatique à Sorbonne Paris Nord. J’ai choisi ce parcours pour développer mes compétences en développement web, gestion de bases de données et programmation logicielle.
+        Mon expérience en développement d’applications, en Big Data et mes stages en entreprise m'ont permis de renforcer mes compétences techniques et ma capacité à travailler en équipe.
+        À terme, je souhaite évoluer vers un poste dans le développement logiciel ou la gestion de projets informatiques, tout en continuant à apprendre et à m’adapter aux nouvelles technologies.
+        </h4></center>
     <section id="competences" class="fade-in">
         <div class="container">
             <h2>Mes Compétences</h2>
