--- a/projets.html
+++ b/projets.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Tharindu Perera</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+
     <header>
         <nav>
             <div class="nav-left">
@@ -28,22 +30,58 @@
     </header>
 
 
+    <!-- Section Projets -->
+    <section id="competences" class="fade-in py-12">
+        <div class="container">
+            <h2 class="text-3xl font-semibold text-center mb-8">Mes Projets</h2>
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+                <!-- Projet 1 -->
+                <div class="relative group bg-gradient-to-r from-indigo-500 to-purple-600 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out">
+                    <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
+                    <div class="p-6">
+                        <h3 class="text-xl text-white font-semibold">Projet Front-End</h3>
+                        <p class="text-gray-200 mt-2">Description rapide de ce projet, montrant les compétences en HTML, CSS, et JavaScript.</p>
+                    </div>
+                    <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
+                </div>
 
+                <!-- Projet 2 -->
+                <div class="relative group bg-gradient-to-r from-green-500 to-teal-400 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out">
+                    <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
+                    <div class="p-6">
+                        <h3 class="text-xl text-white font-semibold">Application Vue.js</h3>
+                        <p class="text-gray-200 mt-2">Une application construite avec Vue.js pour gérer les projets et les tâches.</p>
+                    </div>
+                    <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
+                </div>
 
+                <!-- Projet 3 -->
+                <div class="relative group bg-gradient-to-r from-blue-500 to-cyan-400 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out">
+                    <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
+                    <div class="p-6">
+                        <h3 class="text-xl text-white font-semibold">API Node.js</h3>
+                        <p class="text-gray-200 mt-2">Une API back-end construite avec Node.js pour la gestion des utilisateurs.</p>
+                    </div>
+                    <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
+                </div>
 
-
-
-
-
-
-
-
-
+                <!-- Projet 4 -->
+                <div class="relative group bg-gradient-to-r from-red-500 to-orange-500 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out">
+                    <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
+                    <div class="p-6">
+                        <h3 class="text-xl text-white font-semibold">Gestion de Base de Données</h3>
+                        <p class="text-gray-200 mt-2">Un projet utilisant PostgreSQL et MongoDB pour gérer les données de l'application.</p>
+                    </div>
+                    <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer>
         <p>&copy; 2024 Tharindu Perera - Tous droits réservés.</p>
     </footer>
-    
+
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const sections = document.querySelectorAll(".fade-in");
