--- a/projets.html
+++ b/projets.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+</head>
+<body>
     <header>
         <nav>
             <div class="nav-left">
@@ -26,7 +28,7 @@
                     <span class="burger-line"></span>
                 </button>
             </div>
-        </nav>       
+        </nav>        
     </header>
 
 
@@ -39,8 +41,8 @@
                 <div class="relative group bg-gradient-to-r from-indigo-500 to-purple-600 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out">
                     <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
                     <div class="p-6">
-                        <h3 class="text-xl text-white font-semibold">Projet Front-End</h3>
-                        <p class="text-gray-200 mt-2">Description rapide de ce projet, montrant les compétences en HTML, CSS, et JavaScript.</p>
+                        <h3 class="text-xl text-white font-semibold">Site consulat</h3>
+                        <p class="text-gray-200 mt-2">Description </p>
                     </div>
                     <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
                 </div>
@@ -49,8 +51,8 @@
                 <div class="relative group bg-gradient-to-r from-green-500 to-teal-400 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out">
                     <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
                     <div class="p-6">
-                        <h3 class="text-xl text-white font-semibold">Application Vue.js</h3>
-                        <p class="text-gray-200 mt-2">Une application construite avec Vue.js pour gérer les projets et les tâches.</p>
+                        <h3 class="text-xl text-white font-semibold">Pas d'ideés</h3>
+                        <p class="text-gray-200 mt-2">Desc</p>
                     </div>
                     <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
                 </div>
@@ -59,8 +61,8 @@
                 <div class="relative group bg-gradient-to-r from-blue-500 to-cyan-400 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out">
                     <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
                     <div class="p-6">
-                        <h3 class="text-xl text-white font-semibold">API Node.js</h3>
-                        <p class="text-gray-200 mt-2">Une API back-end construite avec Node.js pour la gestion des utilisateurs.</p>
+                        <h3 class="text-xl text-white font-semibold">PokeKod</h3>
+                        <p class="text-gray-200 mt-2">SAE</p>
                     </div>
                     <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
                 </div>
@@ -70,7 +72,7 @@
                     <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
                     <div class="p-6">
                         <h3 class="text-xl text-white font-semibold">Gestion de Base de Données</h3>
-                        <p class="text-gray-200 mt-2">Un projet utilisant PostgreSQL et MongoDB pour gérer les données de l'application.</p>
+                        <p class="text-gray-200 mt-2">Compte rendu BDD</p>
                     </div>
                     <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
                 </div>
