Ajout des liens vers les projets

--- a/projets.html
+++ b/projets.html
@@ -32,53 +32,93 @@
     </header>
 
 
-    <!-- Section Projets -->
-    <section id="competences" class="fade-in py-12">
-        <div class="container">
-            <h2 class="text-3xl font-semibold text-center mb-8">Mes Projets</h2>
-            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
-                <!-- Projet 1 -->
-                <div class="relative group bg-gradient-to-r from-indigo-500 to-purple-600 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out">
+<!-- Section Projets -->
+<section id="competences" class="fade-in py-12">
+    <div class="container">
+        <h2 class="text-3xl font-semibold text-center mb-8">Mes Projets</h2>
+
+        <div><p>Dans cette section vous trouverez certains projets que j'ai réalisé durant mes années en BUT informatique</p></div>
+        <div><br</div>
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+            
+            <!-- Projet 1 -->
+            <a href="https://github.com/Tharindu-P/Consulat.git" target="_blank" class="block">
+                <div class="relative group bg-gradient-to-r from-indigo-500 to-purple-600 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out cursor-pointer">
                     <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
                     <div class="p-6">
                         <h3 class="text-xl text-white font-semibold">Site consulat</h3>
-                        <p class="text-gray-200 mt-2">Description </p>
+                        <p class="text-gray-200 mt-2">Création d'un site répondant aux besoins d'un client</p>
                     </div>
                     <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
+                    <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" class="w-12 h-12">
+                    </div>
                 </div>
+            </a>
 
-                <!-- Projet 2 -->
-                <div class="relative group bg-gradient-to-r from-green-500 to-teal-400 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out">
+            <!-- Projet 2 -->
+            <a href="https://github.com/Tharindu-P/Multimedia" target="_blank" class="block">
+                <div class="relative group bg-gradient-to-r from-green-500 to-teal-400 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out cursor-pointer">
                     <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
                     <div class="p-6">
-                        <h3 class="text-xl text-white font-semibold">Pas d'ideés</h3>
-                        <p class="text-gray-200 mt-2">Desc</p>
+                        <h3 class="text-xl text-white font-semibold">Multimédia</h3>
+                        <p class="text-gray-200 mt-2">Réalisation d'une oeuvre graphique en python</p>
                     </div>
                     <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
+                    <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" class="w-12 h-12">
+                    </div>
                 </div>
+            </a>
 
-                <!-- Projet 3 -->
-                <div class="relative group bg-gradient-to-r from-blue-500 to-cyan-400 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out">
+            <!-- Projet 3 -->
+            <a href="https://github.com/Tharindu-P/PokeKod.git" target="_blank" class="block">
+                <div class="relative group bg-gradient-to-r from-blue-500 to-cyan-400 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out cursor-pointer">
                     <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
                     <div class="p-6">
                         <h3 class="text-xl text-white font-semibold">PokeKod</h3>
-                        <p class="text-gray-200 mt-2">SAE</p>
+                        <p class="text-gray-200 mt-2">Création d'un sélecteur multimodale basé sur pokémon</p>
                     </div>
                     <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
+                    <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" class="w-12 h-12">
+                    </div>
                 </div>
+            </a>
 
-                <!-- Projet 4 -->
-                <div class="relative group bg-gradient-to-r from-red-500 to-orange-500 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out">
+            <!-- Projet 4 -->
+            <a href="https://github.com/Tharindu-P/BDD" target="_blank" class="block">
+                <div class="relative group bg-gradient-to-r from-red-500 to-orange-500 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out cursor-pointer">
                     <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
                     <div class="p-6">
-                        <h3 class="text-xl text-white font-semibold">Gestion de Base de Données</h3>
-                        <p class="text-gray-200 mt-2">Compte rendu BDD</p>
+                        <h3 class="text-xl text-white font-semibold">Base de Données</h3>
+                        <p class="text-gray-200 mt-2">Réponses aux besoin d'un client avec une BDD NO SQL</p>
                     </div>
                     <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
+                    <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" class="w-12 h-12">
+                    </div>
                 </div>
-            </div>
+            </a>
+            <!-- Projet Podcast - IA dans l'éducation -->
+            <a href="https://www.youtube.com/watch?v=XXXXX" target="_blank" class="block">
+                <div class="relative group bg-gradient-to-r from-blue-500 to-teal-500 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out cursor-pointer">
+                    <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
+                    <div class="p-6">
+                        <h3 class="text-xl text-white font-semibold">Podcast sur l'IA dans l'éducation</h3>
+                        <p class="text-gray-200 mt-2">Un podcast intéressant sur l'impact de l'intelligence artificielle dans le domaine de l'éducation.</p>
+                    </div>
+                    <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
+                    <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/YouTube_icon_%282013-2017%29.png/1024px-YouTube_icon_%282013-2017%29.png" class="w-12 h-12">
+                    </div>
+                </div>
+            </a>
+
         </div>
-    </section>
+    </div>
+</section>
+
 
     <footer>
         <p>&copy; 2024 Tharindu Perera - Tous droits réservés.</p>
