--- a/projets.html
+++ b/projets.html
@@ -101,19 +101,20 @@
                 </div>
             </a>
             <!-- Projet Podcast - IA dans l'éducation -->
-            <a href="https://www.youtube.com/watch?v=XXXXX" target="_blank" class="block">
-                <div class="relative group bg-gradient-to-r from-blue-500 to-teal-500 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out cursor-pointer">
-                    <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
+            <a href="https://youtu.be/u7YNVAulXM0?feature=shared" target="_blank" class="block">
+                <div class="relative group bg-gradient-to-r from-pink-500 to-yellow-500 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out cursor-pointer">
+                    <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200/FF6347/808080?text=Podcast+IA+Education');"></div>
                     <div class="p-6">
-                        <h3 class="text-xl text-white font-semibold">Podcast sur l'IA dans l'éducation</h3>
-                        <p class="text-gray-200 mt-2">Un podcast intéressant sur l'impact de l'intelligence artificielle dans le domaine de l'éducation.</p>
+                        <h3 class="text-xl text-white font-semibold">Podcast</h3>
+                        <p class="text-gray-200 mt-2">Un podcast sur l'impact de l'IA dans le domaine de l'éducation.</p>
                     </div>
                     <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
                     <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/YouTube_icon_%282013-2017%29.png/1024px-YouTube_icon_%282013-2017%29.png" class="w-12 h-12">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" class="w-12 h-12">
                     </div>
                 </div>
             </a>
+
 
         </div>
     </div>
