changement lien ytb

--- a/projets.html
+++ b/projets.html
@@ -101,7 +101,7 @@
                 </div>
             </a>
             <!-- Projet Podcast - IA dans l'éducation -->
-            <a href="https://youtu.be/u7YNVAulXM0?feature=shared" target="_blank" class="block">
+            <a href="https://youtu.be/_J3-FVsI0dk?feature=shared" target="_blank" class="block">
                 <div class="relative group bg-gradient-to-r from-pink-500 to-yellow-500 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out cursor-pointer">
                     <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200/FF6347/808080?text=Podcast+IA+Education');"></div>
                     <div class="p-6">
