ajout de la section parcours

--- a/index.html
+++ b/index.html
@@ -63,6 +63,42 @@
         Mon expérience en développement d’applications, en Big Data et mes stages en entreprise m'ont permis de renforcer mes compétences techniques et ma capacité à travailler en équipe.
         À terme, je souhaite évoluer vers un poste dans le développement logiciel ou la gestion de projets informatiques, tout en continuant à apprendre et à m’adapter aux nouvelles technologies.
         </h4></center>
+
+    <!-- Section Parcours -->
+    <section id="parcours" class="fade-in py-12">
+        <div class="container">
+            <h2>Mon Parcours</h2>
+            
+            <!-- Première année -->
+            <div class="competence-category mb-8">
+                <h3 class="text-2xl font-semibold text-center mb-4">BUT1</h3>
+                <p class="text-gray-200 text-lg">Lors de cette première année j'ai essentiellement appris les bases de différents langages de programmations 
+                    tels que HTML, CSS ou encore Java. J'ai également pu m'améliorer en Python et d'autres compétences 
+                    autre que l'informatique : travail d'équipe, la gestion de projet. Cette première année m'aura permis 
+                    de comprendre ce que j'aimais faire, quelle partie de l'informatique m'intéressait le plus.</p>
+            </div>
+
+            <!-- Deuxième année -->
+            <div class="competence-category mb-8">
+                <h3 class="text-2xl font-semibold text-center mb-4">BUT2 et Stage</h3>
+                <p class="text-gray-200 text-lg">La deuxième année, quant à elle, m'aura surtout permis de devenir plus autonome, 
+                    notamment grâce aux projets de plus grands envergures. De plus cette année m'a donné la possibilité de faire un stage, 
+                    je l'ai effectué dans la startup Digi&Itech en tant que programmeur pour créer des scripts d'automatisations, 
+                    découvrant une nouvelle méthode de travail, et grâce aux réunions quotidiennes. J'ai pu avoir une bonne expérience dans le 
+                    monde du domaine professionel</p>
+            </div>
+
+            <!-- Troisième année -->
+            <div class="competence-category">
+                <h3 class="text-2xl font-semibold text-center mb-4">BUT3</h3>
+                <p class="text-gray-200 text-lg">Les expériences ainsi que projets des années passées m'ont permis d'aborder 
+                    cette troisième sans problème, avec toutes les méthodologies et l'expérience nécessaires pour réussir. 
+                    Je suis maintenant motivé à atteindre mes objectifs : intégrer un Master en cybersécurité 
+                    ou en développement web.</p>
+            </div>
+        </div>
+    </section>
+
     <section id="competences" class="fade-in">
         <div class="container">
             <h2>Mes Compétences</h2>
