--- a/projets.html
+++ b/projets.html
@@ -31,7 +31,8 @@
         </nav>        
     </header>
 
-
+    <div class="container"></div>
+    <div class="container"></div>
 <!-- Section Projets -->
 <section id="competences" class="fade-in py-12">
     <div class="container">
