Ajout du projet d’audit de sites web dans projets.html

--- a/projets.html
+++ b/projets.html
@@ -8,9 +8,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-
-</head>
-<body>
     <header>
         <nav>
             <div class="nav-left">
@@ -33,94 +30,110 @@
 
     <div class="container"></div>
     <div class="container"></div>
-<!-- Section Projets -->
-<section id="competences" class="fade-in py-12">
-    <div class="container">
-        <h2 class="text-3xl font-semibold text-center mb-8">Mes Projets</h2>
 
-        <div><p>Dans cette section vous trouverez certains projets que j'ai réalisé durant mes années en BUT informatique</p></div>
-        <div><br</div>
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
-            
-            <!-- Projet 1 -->
-            <a href="https://github.com/Tharindu-P/Consulat.git" target="_blank" class="block">
-                <div class="relative group bg-gradient-to-r from-indigo-500 to-purple-600 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out cursor-pointer">
-                    <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
-                    <div class="p-6">
-                        <h3 class="text-xl text-white font-semibold">Site consulat</h3>
-                        <p class="text-gray-200 mt-2">Création d'un site répondant aux besoins d'un client</p>
-                    </div>
-                    <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
-                    <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" class="w-12 h-12">
-                    </div>
-                </div>
-            </a>
+    <!-- Section Projets -->
+    <section id="competences" class="fade-in py-12">
+        <div class="container">
+            <h2 class="text-3xl font-semibold text-center mb-8">Mes Projets</h2>
 
-            <!-- Projet 2 -->
-            <a href="https://github.com/Tharindu-P/Multimedia" target="_blank" class="block">
-                <div class="relative group bg-gradient-to-r from-green-500 to-teal-400 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out cursor-pointer">
-                    <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
-                    <div class="p-6">
-                        <h3 class="text-xl text-white font-semibold">Multimédia</h3>
-                        <p class="text-gray-200 mt-2">Réalisation d'une oeuvre graphique en python</p>
-                    </div>
-                    <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
-                    <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" class="w-12 h-12">
-                    </div>
-                </div>
-            </a>
+            <div>
+                <p>Dans cette section vous trouverez certains projets que j'ai réalisé durant mes années en BUT informatique</p>
+            </div>
+            <div><br></div>
 
-            <!-- Projet 3 -->
-            <a href="https://github.com/Tharindu-P/PokeKod.git" target="_blank" class="block">
-                <div class="relative group bg-gradient-to-r from-blue-500 to-cyan-400 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out cursor-pointer">
-                    <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
-                    <div class="p-6">
-                        <h3 class="text-xl text-white font-semibold">PokeKod</h3>
-                        <p class="text-gray-200 mt-2">Création d'un sélecteur multimodale basé sur pokémon</p>
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+                <!-- Projet 1 -->
+                <a href="https://github.com/Tharindu-P/Consulat.git" target="_blank" class="block">
+                    <div class="relative group bg-gradient-to-r from-indigo-500 to-purple-600 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out cursor-pointer">
+                        <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
+                        <div class="p-6">
+                            <h3 class="text-xl text-white font-semibold">Site consulat</h3>
+                            <p class="text-gray-200 mt-2">Création d'un site répondant aux besoins d'un client</p>
+                        </div>
+                        <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
+                        <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                            <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" class="w-12 h-12">
+                        </div>
                     </div>
-                    <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
-                    <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" class="w-12 h-12">
-                    </div>
-                </div>
-            </a>
+                </a>
 
-            <!-- Projet 4 -->
-            <a href="https://github.com/Tharindu-P/BDD" target="_blank" class="block">
-                <div class="relative group bg-gradient-to-r from-red-500 to-orange-500 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out cursor-pointer">
-                    <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
-                    <div class="p-6">
-                        <h3 class="text-xl text-white font-semibold">Base de Données</h3>
-                        <p class="text-gray-200 mt-2">Réponses aux besoin d'un client avec une BDD NO SQL</p>
+                <!-- Projet 2 -->
+                <a href="https://github.com/Tharindu-P/Multimedia" target="_blank" class="block">
+                    <div class="relative group bg-gradient-to-r from-green-500 to-teal-400 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out cursor-pointer">
+                        <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
+                        <div class="p-6">
+                            <h3 class="text-xl text-white font-semibold">Multimédia</h3>
+                            <p class="text-gray-200 mt-2">Réalisation d'une oeuvre graphique en python</p>
+                        </div>
+                        <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
+                        <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                            <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" class="w-12 h-12">
+                        </div>
                     </div>
-                    <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
-                    <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" class="w-12 h-12">
-                    </div>
-                </div>
-            </a>
-            <!-- Projet Podcast - IA dans l'éducation -->
-            <a href="https://youtu.be/_J3-FVsI0dk?feature=shared" target="_blank" class="block">
-                <div class="relative group bg-gradient-to-r from-pink-500 to-yellow-500 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out cursor-pointer">
-                    <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200/FF6347/808080?text=Podcast+IA+Education');"></div>
-                    <div class="p-6">
-                        <h3 class="text-xl text-white font-semibold">Podcast</h3>
-                        <p class="text-gray-200 mt-2">Un podcast sur l'impact de l'IA dans le domaine de l'éducation.</p>
-                    </div>
-                    <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
-                    <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" class="w-12 h-12">
-                    </div>
-                </div>
-            </a>
+                </a>
 
+                <!-- Projet 3 -->
+                <a href="https://github.com/Tharindu-P/PokeKod.git" target="_blank" class="block">
+                    <div class="relative group bg-gradient-to-r from-blue-500 to-cyan-400 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out cursor-pointer">
+                        <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
+                        <div class="p-6">
+                            <h3 class="text-xl text-white font-semibold">PokeKod</h3>
+                            <p class="text-gray-200 mt-2">Création d'un sélecteur multimodale basé sur pokémon</p>
+                        </div>
+                        <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
+                        <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                            <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" class="w-12 h-12">
+                        </div>
+                    </div>
+                </a>
 
+                <!-- Projet 4 -->
+                <a href="https://github.com/Tharindu-P/BDD" target="_blank" class="block">
+                    <div class="relative group bg-gradient-to-r from-red-500 to-orange-500 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out cursor-pointer">
+                        <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200');"></div>
+                        <div class="p-6">
+                            <h3 class="text-xl text-white font-semibold">Base de Données</h3>
+                            <p class="text-gray-200 mt-2">Réponses aux besoins d'un client avec une BDD NO SQL</p>
+                        </div>
+                        <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
+                        <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                            <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" class="w-12 h-12">
+                        </div>
+                    </div>
+                </a>
+
+                <!-- Projet Podcast -->
+                <a href="https://youtu.be/_J3-FVsI0dk?feature=shared" target="_blank" class="block">
+                    <div class="relative group bg-gradient-to-r from-pink-500 to-yellow-500 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out cursor-pointer">
+                        <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200/FF6347/808080?text=Podcast+IA+Education');"></div>
+                        <div class="p-6">
+                            <h3 class="text-xl text-white font-semibold">Podcast</h3>
+                            <p class="text-gray-200 mt-2">Un podcast sur l'impact de l'IA dans le domaine de l'éducation.</p>
+                        </div>
+                        <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
+                        <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" class="w-12 h-12">
+                        </div>
+                    </div>
+                </a>
+
+                    <!-- Projet Audit Web -->
+                    <a href="https://github.com/Tharindu-P/audits" target="_blank" class="block">
+                        <div class="relative group bg-gradient-to-r from-fuchsia-700 to-rose-500 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 ease-in-out cursor-pointer">
+                            <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200/F472B6/FFFFFF?text=Audit+Web');"></div>
+                            <div class="p-6">
+                                <h3 class="text-xl text-white font-semibold">Audit de sites web</h3>
+                                <p class="text-gray-200 mt-2">Audits techniques de sites web avec analyse de la structure, sécurité, performance et UX</p>
+                            </div>
+                            <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
+                            <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                                <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" class="w-12 h-12">
+                            </div>
+                        </div>
+                    </a>
+            </div>
         </div>
-    </div>
-</section>
-
+    </section>
 
     <footer>
         <p>&copy; 2024 Tharindu Perera - Tous droits réservés.</p>
@@ -141,18 +154,18 @@
                 observer.observe(section);
             });
 
-            // Code pour rediriger vers les pages lors du clic sur les boutons de navigation
+            // Navigation
             document.getElementById("btn1").addEventListener("click", function() {
-                window.location.href = "index.html"; // Redirige vers la page d'accueil
+                window.location.href = "index.html";
             });
             document.getElementById("btn2").addEventListener("click", function() {
-                window.location.href = "cv.pdf"; // Redirige vers la page CV
+                window.location.href = "cv.pdf";
             });
             document.getElementById("btn3").addEventListener("click", function() {
-                window.location.href = "projets.html"; // Redirige vers la page Projets
+                window.location.href = "projets.html";
             });
 
-            // Burger menu logic
+            // Burger menu
             const burger = document.getElementById('burger');
             const navList = document.querySelector('.nav-right ul');
             burger.addEventListener('click', () => {
