--- a/projets.html
+++ b/projets.html
@@ -123,7 +123,7 @@
                             <div class="w-full h-48 bg-cover bg-center" style="background-image: url('https://via.placeholder.com/400x200/F472B6/FFFFFF?text=Audit+Web');"></div>
                             <div class="p-6">
                                 <h3 class="text-xl text-white font-semibold">Audit de sites web</h3>
-                                <p class="text-gray-200 mt-2">Audits techniques de sites web avec analyse de la structure, sécurité, performance et UX</p>
+                                <p class="text-gray-200 mt-2">Analyse de la structure, sécurité, performance et UX</p>
                             </div>
                             <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-300"></div>
                             <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
